# hktn2-phase1

./: .env.example  .gitignore  .pre-commit-config.yaml  PHASE1_TASKS.md  PHASE1_TECHNICAL_PLAN.md  README.md  input.txt  pyproject.toml  requirements.txt  specification.md
app/: config.py  database.py  main.py
app/api/v1/: ai.py  todos.py
app/mcp/: tools.py
app/models/: schemas.py  todo.py
app/repository/: todo_repository.py
app/services/: ai_service.py  mcp_service.py  todo_service.py
history/phase1/: PHASE1_COMPLETION_REPORT.md  PHASE1_FILE_MANIFEST.md  PHASE1_TASKS.md
history/phase1/docs/: PHASE1_PLAN.md  PHASE1_SPEC.md  PROJECT_CONSTITUTION.md  README.md
history/prompts/general/: 001-phase1-tasks.general.prompt.md
history/prompts/phase1-todo-app/: 002-implementation.tasks.prompt.md
tests/: test_ai_service.py  test_mcp_service.py  test_todos.py
tests/test_integration/: test_api.py
